<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ShoppingCategoryActivity">

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="welcome body" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/shop_by_categories_tv_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTV" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/container2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IV1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/electronics" />

        <TextView
            android:id="@+id/electronicsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electronics_tv_text"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/IV1"
            app:layout_constraintTop_toBottomOf="@id/IV1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/container1"
        app:layout_constraintTop_toBottomOf="@id/titleTV">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IV2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/clothing" />

        <TextView
            android:id="@+id/clothingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clothing_tv_text"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/IV2"
            app:layout_constraintTop_toBottomOf="@id/IV2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/container4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container1">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IV3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/beauty" />

        <TextView
            android:id="@+id/BeautyTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beauty_tv_text"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/container3"
        app:layout_constraintTop_toBottomOf="@id/container2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/IV4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/food" />

        <TextView
            android:id="@+id/foodTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_tv_text"
            android:textSize="25sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>